  * Add Japanese translation of menu sections. Thanks GOTO Masanori.
  * Morten Brix Pedersen:
    - Finally make the output of update-menus and install-menu properly
    i18n'ed. Translators should now start translating menu.pot in po/.
    Closes: #200072
    - Added Danish translation of the above.
    - Add menu sections Games/Simulation and Apps/Education to
    menu-section.pot.
  * Add menu sections Games/Simulation and Apps/Education to menu.sgml and
    menufile.5.
  * Convert this file to UTF-8.
  * Bump Standards-Version to 3.6.1.
  * install-menu now accept options before argument. Thanks Denis Barbier.
  * Remove Conflicts: pdmenu (<=0.5.9) dated 1997.
  * Don't ship the outdated README.changes file.
  * Fix typo in menu.h file and add sort=tolower(title()) to make sort order
    case insensitive. Closes: #209257. Thanks Daniel Burrows.
  * menu.sgml: insist that menu title must be capitalized.
  * postinst/postrm: Remove pre-menu-1.0 kludges.
  * debian/rules: ship update-menus non executable.

 -- Bill Allombert <ballombe@debian.org>  Wed,  8 Oct 2003 18:16:11 +0200

menu (2.1.9-1) unstable; urgency=low

  * The "And no, I'm not accepting job offers" release. 
  * Change contact address to `menu@packages.debian.org'.
  * doc/menufile.5: Update list of menu sections.
  * default/bash: removed. Thanks Matthias Klose.
  * debian/rules: do not create empty dir /usr/share/pixmaps.
    Closes: #196713. Thanks Ryan Murray.
  * doc/menu.sgml: 
    + Fix capitalisation of `Debian'.
    + Improve section `How a user can override the menus'.
    + Move 'Variables and functions' to a new chapter and format it properly.
  * update-menus.cc: use F_GETLK instead of F_SETLK to query dpkg lock.
  * Morten Brix Pedersen:
    - Just skip the file when its missing a tag, instead of stopping
    completely. Closes: #56839
    - menu-methods can now define the charset/encoding which the outputted
    section names should be in by using the outputencoding variable.
